# SeDriCa-Batmobile-testing

./: controls.py  package.xml  perception_noROS_v0.py  perception_noROS_v1.py  setup.py  temp
comm/: package.xml  setup.cfg  setup.py
comm/comm/: comm_pub.py
controls/: package.xml
controls/controls/: controls_v1.py  controls_v2.py
install/: local_setup.sh  setup.sh
install/batmobile_perception/lib/batmobile_perception/: locate_func  publisher  subscriber
install/batmobile_perception/share/batmobile_perception/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mp/lib/mp/: coordinates_receiver
install/mp/share/mp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mp/share/mp/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_mp__rosidl_generator_cExport-noconfig.cmake  export_mp__rosidl_generator_cExport.cmake  export_mp__rosidl_generator_cppExport.cmake  export_mp__rosidl_generator_pyExport-noconfig.cmake  (+11 more)
log/: latest_build
mp/: CMakeLists.txt
mp/src/: coordinatesreceiver.cpp
perception/src/batmobile_perception/: setup.cfg  setup.py
perception/src/batmobile_perception/batmobile_perception/: pubv2.py
pythoncontroltesting/: comm.py  dcMotor.py  servo2.py  servoTimeAngleControlled.py  servobasic.py  servomotor.py  test.py
pythoncontroltesting/WASD/: controls_v1.py  functions.py  test.py  wsadcontrol.py
temp/: setup.py
temp/controls/: controls_v0.py  wsadcontrol.py
(+39 files in other folders)
